--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+html, body, #root, .app, .content {
+  height: 100%;
+  width: 100%;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
